<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logout_menu"
        android:contentDescription="@string/logout"
        android:icon="@drawable/logout"
        app:showAsAction="collapseActionView|always"
        android:title="@string/logout" />

    <item
        android:id="@+id/maps_menu"
        android:contentDescription="@string/maps"
        android:icon="@drawable/map"
        app:showAsAction="collapseActionView|always"
        android:title="@string/maps"/>

    <item
        android:id="@+id/dark_mode_menu"
        android:contentDescription="@string/logout"
        android:icon="@drawable/ic_dark_mode"
        app:showAsAction="collapseActionView|always"
        android:title="@string/dark_mode" />


</menu>