<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.login.LoginActivity">


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/selamat_datang"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.storyapp.view.customview.EmailEditText
        android:id="@+id/eet_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/hint_email"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        tools:layout_editor_absoluteX="20dp" />

    <com.example.storyapp.view.customview.PasswordEditText
        android:id="@+id/pet_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/hint_password"
        android:paddingTop="20dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/eet_email"
        app:layout_constraintStart_toStartOf="@+id/eet_email"
        app:layout_constraintTop_toBottomOf="@+id/eet_email" />


    <com.example.storyapp.view.customview.ButtonCostum
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_login"
        android:textColor="#FFF"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintEnd_toEndOf="@+id/pet_password"
        app:layout_constraintStart_toStartOf="@+id/pet_password"
        app:layout_constraintTop_toBottomOf="@+id/pet_password" />


    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <com.example.storyapp.view.customview.ButtonCostum
        android:id="@+id/btn_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_register"
        android:textColor="#FFF"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintEnd_toEndOf="@+id/tv_or"
        app:layout_constraintStart_toStartOf="@+id/tv_or"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>